--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <title>Rock Paper Scissors!</title>
 </head>
 <body>
-    <button>Rock</button>
-    <button>Paper</button>
-    <button>Scissors</button>
+    <div class="container">
+        <button>Rock</button>
+        <button>Paper</button>
+        <button>Scissors</button>
+    </div>
+   
     <script src="script.js"></script>
 </body>
 </html>
