--- a/index.html
+++ b/index.html
@@ -4,15 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/201e2fb5e7.js" crossorigin="anonymous"></script>
     <title>Rock Paper Scissors!</title>
 </head>
 <body>
-    <div class="container">
-        <button>Rock</button>
-        <button>Paper</button>
-        <button>Scissors</button>
-    </div>
-   
+    <main>
+        <h1>Rock Paper Scissors!</h1>
+        <p>What's your choice?</p>
+        <div class="container">
+            <div class="options-container">
+                <button>Rock<i class="fa-solid fa-hand-back-fist"></i></button>
+                <button>Paper<i class="fa-solid fa-hand"></i></button>        
+                <button>Scissors<i class="fa-solid fa-hand-scissors"></i></button>
+            </div>
+        </div>
+    </main>
+   <footer>
+    <p><a href="https://github.com/diego2go">diego2go <i class="fa-brands fa-github"></i></a></p>
+   </footer>
     <script src="script.js"></script>
 </body>
 </html>
